k8s/prod/01-config.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prod
  labels:
    env: production
    project: dg-inventory
