k8s/prod/04-apps.yaml
# --- AUTH SERVICE ---
apiVersion: v1
kind: Service
metadata:
  name: auth
  namespace: prod
spec:
  ports:
    - port: 4000
  selector:
    app: auth
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
  namespace: prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      restartPolicy: Always
      # Init Containers to wait for Infra
      containers:
      - name: auth
        image: kabbo06/inventory-auth
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 4000
        startupProbe:
          httpGet: { path: "/auth/health", port: 4000 }
          failureThreshold: 15
          periodSeconds: 5
        readinessProbe:
          httpGet: { path: "/auth/health", port: 4000 }
          initialDelaySeconds: 2
          periodSeconds: 5
        livenessProbe:
          httpGet: { path: "/auth/health", port: 4000 }
          initialDelaySeconds: 10
          periodSeconds: 15
        resources:
          limits: { memory: "256Mi", cpu: "500m" }
          requests: { memory: "128Mi", cpu: "100m" }
---
# --- INVENTORY (BACKEND) ---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: prod
spec:
  ports:
    - port: 5000
  selector:
    app: backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      restartPolicy: Always
      containers:
      - name: backend
        image: kabbo06/inventory-backend
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
        startupProbe:
          httpGet: { path: "/api/products/health", port: 5000 }
          failureThreshold: 20
          periodSeconds: 5
        readinessProbe:
          httpGet: { path: "/api/products/health", port: 5000 }
          initialDelaySeconds: 2
          periodSeconds: 5
        livenessProbe:
          httpGet: { path: "/api/products/health", port: 5000 }
          initialDelaySeconds: 10
          periodSeconds: 20
        resources:
          limits: { memory: "512Mi", cpu: "500m" }
          requests: { memory: "256Mi", cpu: "150m" }
---
# --- FRONTEND (NGINX) ---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: prod
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      securityContext:
        runAsUser: 101
        runAsGroup: 101
        fsGroup: 101
      containers:
      - name: frontend
        image: kabbo06/inventory-frontend
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        startupProbe:
          httpGet: { path: "/", port: 8080 }
          failureThreshold: 10
          periodSeconds: 2
        readinessProbe:
          httpGet: { path: "/", port: 8080 }
          initialDelaySeconds: 2
          periodSeconds: 10
        livenessProbe:
          httpGet: { path: "/", port: 8080 }
          initialDelaySeconds: 5
          periodSeconds: 20
        resources:
          limits: { memory: "128Mi", cpu: "200m" }
          requests: { memory: "64Mi", cpu: "50m" }
